Fix: improve partial SQS acknowledgement failure handling
- handle DeleteMessageBatch partial failures in a dedicated method
- map AWS failed entry IDs to original message IDs
- populate SqsAcknowledgementException with successful/failed message lists
- avoid wrapping SqsAcknowledgementException twice
- extend SqsAcknowledgementExecutorTests to assert partial failure mapping