@@ -28,6 +28,7 @@ import io.awspring.cloud.sqs.listener.QueueAttributes;
 import io.awspring.cloud.sqs.listener.SqsHeaders;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
 import org.junit.jupiter.api.Test;
@@ -60,14 +61,22 @@ class SqsAcknowledgementExecutorTests {
 	@Mock
 	Message<String> message;
 
+	@Mock
+	Message<String> secondMessage;
+
 	String queueName = "sqsAcknowledgementExecutorTestsQueueName";
 
 	String queueUrl = "sqsAcknowledgementExecutorTestsQueueUrl";
 
 	String receiptHandle = "sqsAcknowledgementExecutorTestsQueueReceiptHandle";
 
+	String secondReceiptHandle = "sqsAcknowledgementExecutorTestsQueueSecondReceiptHandle";
+
 	MessageHeaders messageHeaders = new MessageHeaders(
 			Collections.singletonMap(SqsHeaders.SQS_RECEIPT_HANDLE_HEADER, receiptHandle));
+
+	MessageHeaders secondMessageHeaders = new MessageHeaders(
+			Collections.singletonMap(SqsHeaders.SQS_RECEIPT_HANDLE_HEADER, secondReceiptHandle));
 
 	@Test
 	void shouldDeleteMessages() throws Exception {
@@ -131,13 +140,19 @@ class SqsAcknowledgementExecutorTests {
 
 	@Test
 	void shouldWrapPartialBatchFailure() {
-		Collection<Message<String>> messages = Collections.singletonList(message);
-		given(message.getHeaders()).willReturn(messageHeaders);
+		Message<String> failedMessage = message;
+		Message<String> successfulMessage = secondMessage;
+		MessageHeaders failedMessageHeaders = messageHeaders;
+		MessageHeaders successfulMessageHeaders = secondMessageHeaders;
+		Collection<Message<String>> messagesToAck = List.of(failedMessage, successfulMessage);
+
+		given(failedMessage.getHeaders()).willReturn(failedMessageHeaders);
+		given(successfulMessage.getHeaders()).willReturn(successfulMessageHeaders);
 		given(queueAttributes.getQueueName()).willReturn(queueName);
 		given(queueAttributes.getQueueUrl()).willReturn(queueUrl);
 
-		BatchResultErrorEntry failedEntry = BatchResultErrorEntry.builder().id("test-id").code("ReceiptHandleIsInvalid")
-				.message("Receipt handle expired").build();
+		BatchResultErrorEntry failedEntry = BatchResultErrorEntry.builder().id(failedMessageHeaders.getId().toString())
+				.code("ReceiptHandleIsInvalid").message("Receipt handle expired").build();
 
 		DeleteMessageBatchResponse partialFailureResponse = DeleteMessageBatchResponse.builder().failed(failedEntry)
 				.build();
@@ -149,8 +164,12 @@ class SqsAcknowledgementExecutorTests {
 		executor.setSqsAsyncClient(sqsAsyncClient);
 		executor.setQueueAttributes(queueAttributes);
 
-		assertThatThrownBy(() -> executor.execute(messages).join()).isInstanceOf(CompletionException.class)
-				.hasCauseInstanceOf(SqsAcknowledgementException.class);
+		assertThatThrownBy(() -> executor.execute(messagesToAck).join()).isInstanceOf(CompletionException.class)
+				.getCause().isInstanceOf(SqsAcknowledgementException.class)
+				.asInstanceOf(type(SqsAcknowledgementException.class)).satisfies(ex -> {
+					assertThat(ex.getFailedAcknowledgementMessages()).containsExactly(failedMessage);
+					assertThat(ex.getSuccessfullyAcknowledgedMessages()).containsExactly(successfulMessage);
+				});
 	}
 
 }
